Configure urls for external-files downloads Fixed layout of external-filed download dialog to resemble that for local born digital files